# iirt

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: atomic_formation_experiment.rs  atomic_information_mapping.rs  complex_atomic_dynamics.rs  core_properties_verification.rs  cosmic_evolution_demo.rs  emergent_evolution.rs  evolutionary_ecosystem_emergence.rs  evolving_vacuum_experiment.rs  exponential_vacuum_test.rs  fluid_thermodynamics_emergence.rs  fundamental_truth_demo.rs  information_flow_dynamics.rs  information_memory_learning.rs  neural_network_emergence.rs  physics_emergence.rs  quantum_emergence_experiment.rs  quantum_measurement_experiment.rs  radioactive_decay_information_experiment.rs  reality_demo.rs  simple_em_field_test.rs  threshold_characterization_experiment.rs  universe_computing_itself.rs  vacuum_evolution_proof.rs  water_memory_experiment.rs
src/: constants.rs  lib.rs  reality.rs
tests/: theory_of_everything.rs
